HelpMePlay | 1.0.6
	Dialog:
		- Added more pet tamers.
		- Added more stable masters.
		- Nazgrim, if "Dialog" is enabled, will now auto skip The Maw intro.
		- High Inquisitor Whitemane, if "Dialog" is enabled, will now auto skip The Maw intro.
		- Added the Holdouts during the "The Waning Grove" bonus objective in Ardenweald.
	Quests:
		- Gatamatos will now include a note during the "Tactical Formation" quest in Bastion, similar to the world quest.
	Fixes:
		- Fatescribe Roh-Tahl is automated again.
		- Fixed the dialogs for the NPCs involved in the "A Plague on Your House" quest in Maldraxxus.
		- Fixed the dialogs for the NPCs involved in the "...Even the Most Ridiculous Request!" quest in Maldraxxus.
		- Fixed the dialogs for the NPCs involved in the "Test Your Mettle" quest in Maldraxxus.
		- Fixed the dialogs for the NPCs involved in the "Ages-Echoing Wisdom" quest in Ardenweald.
		- Fixed the dialogs for the NPCs involved in the "Bring Out Your Tithe" quest in Revendreth.
		- Fixed the dialogs for the NPCs involved in the "Finders-Keepers, Sinners-Weepers" quest in Revendreth.