@@ -150,6 +150,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Evacuate, now!"]															= "Evacuate, now!"
 	L["Yes!"]																	= "Yes!"
 	L["Quest"]																	= "Quest"
+	L["Show me my Renown."]														= "Show me my Renown."
 	L["Very well. Let us fight."]												= "Very well. Let us fight."
 	L["Maldraxxus needs your service. Will you fight?"]							= "Maldraxxus needs your service. Will you fight?"
 	L["I have heard this tale before."]											= "I have heard this tale before."
@@ -244,6 +245,8 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Ve'rayn 2"]																= "I'm sorry, what did you say this was for?"
 	L["Ve'rayn 3"]																= "Who is Ve'nari?"
 	L["Ve'rayn 4"]																= "I have never met anyone named Ve'nari."
+	L["Ve'nari 1"]																= "What are your ground rules for working together?"
+	L["Ve'nari 2"]																= "Deal. I will tell no one about you in exchange for the Soulkeeper."
 	L["Polemarch Adrestes 1"]													= "<Ask Adrestes what happened in Elysian Hold.>"
 	L["Voitha 1"]																= "I will retrieve the scrolls."
 	L["Nemea 1"]																= "I choose the larion."
